--- a/backend/mocha-chai-synon/package.json
+++ b/backend/mocha-chai-synon/package.json
@@ -3,8 +3,9 @@
     "test": "mocha --opts mocha.opts"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^3.5.0",
-    "sinon": "^3.2.1"
+    "chai": "4.1.2",
+    "chai-json-schema": "1.5.0",
+    "mocha": "3.5.0",
+    "sinon": "3.2.1"
   }
 }
