--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -4,7 +4,7 @@
   "description": "Backend application",
   "main": "index.js",
   "dependencies": {
-    "request": "^2.81.0",
-    "request-promise-native": "^1.0.4"
+    "request": "2.81.0",
+    "request-promise-native": "1.0.4"
   }
 }
