--- a/backend/mocha-chai-sinon/package.json
+++ b/backend/mocha-chai-sinon/package.json
@@ -7,6 +7,7 @@
     "chai-json-schema": "^1.5.0",
     "mocha": "^3.5.0",
     "proxyquire": "^1.8.0",
-    "sinon": "^3.2.1"
+    "sinon": "^3.2.1",
+    "chai-as-promised": "^7.1.1"
   }
 }
